<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nahuelultrabook.ch_app_v11.SettingsActivity">

    <TextView
        android:id="@+id/objectiveTitle"
        android:text="@string/settingsobjectiveTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <RadioGroup android:id="@+id/GrbGrupo1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/objectiveTitle"
        android:layout_marginTop="20sp">

        <RadioButton android:id="@+id/RbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsRbOpcion1" />

        <RadioButton android:id="@+id/RbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsRbOpcion2" />
    </RadioGroup>

    <TextView
        android:id="@+id/otherPreferenceTitle"
        android:text="@string/settingsotherPreferenceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/GrbGrupo1"
        android:textSize="18sp"
        android:layout_marginTop="20sp"/>

    <CheckBox
        android:id="@+id/otherPreference"
        android:text="@string/settingsotherPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherPreferenceTitle"
        android:checked="false"
        android:layout_marginTop="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otherPreference"
        android:layout_marginTop="20sp"
        android:id="@+id/BtnSave"
        android:text="@string/settingsBtnSave" />

</RelativeLayout>
