<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nahuelultrabook.ch_app_v11.CourseActivity">

    <TextView
        android:id="@+id/careerTitle"
        android:text="@string/careerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <ListView android:id="@+id/levelsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp" />

    <TextView android:id="@+id/AddNewLevelTitle"
        android:text="@string/AddNewLevelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/levelsList"
        android:textSize="18sp"
        android:layout_marginTop="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/fieldLevelTitleLbl"
        android:text="@string/fieldLevelTitleLbl"
        android:layout_below="@+id/AddNewLevelTitle"
        android:textSize="16dp"
        android:layout_marginTop="10sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/fieldLevelTitle"
        android:layout_below="@+id/fieldLevelTitleLbl"
        android:layout_alignEnd="@+id/title" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/fieldLevelTitle"
        android:id="@+id/fieldLevelStatus"
        android:text="@string/fieldLevelStatus" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCreateLevel"
        android:text="@string/btnCreateLevel"
        android:layout_below="@+id/fieldLevelStatus"
        android:textSize="14dp"
        android:background="@color/accent_material_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="10sp" />

</RelativeLayout>
