<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nahuelultrabook.ch_app_v11.SigninActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/sigintitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:height="80dp"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/nameLbl"
        android:text="@string/signinnameLbl"
        android:layout_below="@+id/title"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameField"
        android:layout_below="@+id/nameLbl"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/emailLbl"
        android:text="@string/signinemailLbl"
        android:layout_below="@+id/nameField"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_below="@+id/emailLbl"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/nameField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/passLbl"
        android:text="@string/signinpassLbl"
        android:layout_below="@+id/emailField"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passField"
        android:layout_below="@+id/passLbl"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/emailField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signinLbl"
        android:id="@+id/btnSubmit"
        android:layout_below="@+id/passField"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/passField"
        android:textSize="25dp"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textStyle="bold"
        android:textAllCaps="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signinbtnLogin"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/btnSubmit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/title"
        android:textSize="25dp"
        android:background="@android:color/darker_gray"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textStyle="bold"
        android:textAllCaps="false" />

</RelativeLayout>